--- a/src/Components/BlogPreviewCard/blogPreviewCard.css
+++ b/src/Components/BlogPreviewCard/blogPreviewCard.css
@@ -1,13 +1,14 @@
 * {
   margin: 0;
-  padding: 4px;
+  padding: 0px;
+  box-sizing: border-box;
 }
 
 .card {
-  width: 375px;
+  width: 325px;
   padding: 24px;
   border-radius: 24px;
-  border: 2px solid black;
+  border: 1.5px solid black;
 }
 
 header {
@@ -18,13 +19,15 @@ header {
 
 h1 {
   width: 98px;
-  height: 30px;
+  /* height: 30px; */
   border-radius: 10px;
-  background-color: hsl(47, 88%, 63%);
+  background-color: rgb(242, 206, 77);
+  padding-top: 12px;
 }
 
 header p {
-  padding-top: 12px;
+  padding-top: 16px;
+  padding-bottom: 12px;
 }
 
 .topImg {
