--- a/src/Components/BlogPreviewCard/blogPreviewCard.css
+++ b/src/Components/BlogPreviewCard/blogPreviewCard.css
@@ -1,45 +1,57 @@
-* {
-  margin: 0;
-  padding: 0px;
-  box-sizing: border-box;
-}
 
 .card {
+  display: grid;
+  gap: 16px; /*! sjekk om du finner en verdi som er bedre */
   width: 325px;
-  padding: 24px;
+  padding: 20px;
   border-radius: 24px;
   border: 1.5px solid black;
-}
-
-header {
-  object-fit: cover;
-  display: flex;
-  flex-direction: column;
-}
-
-h1 {
-  width: 98px;
-  /* height: 30px; */
-  border-radius: 10px;
-  background-color: rgb(242, 206, 77);
-  padding-top: 12px;
-}
-
-header p {
-  padding-top: 16px;
-  padding-bottom: 12px;
+  font-family: "Figtree", serif;
+  /*! legg til box-shadow */
 }
 
 .topImg {
   object-fit: cover;
+  width: 100%;
   border-radius: 24px;
+  /*! set a correct height for the image */
 }
 
-footer {
-  display: flex;
+.cardContent {
+  display: grid;
+  gap: 16px;
 }
 
 h3 {
-  align-items: center;
+  width: fit-content;
+  border-radius: 10px; /*! change this to a bit lower px */
+  /*! change font-size, should be around 16-18px */
+  background-color: rgb(242, 206, 77);
+  padding: 6px;
+/*! add correct font-weight */
+}
+
+.card p {
+  /* padding-top: 16px;
+  padding-bottom: 12px; */
+}
+
+.card p.desciption {
+  /*! endre color for denne teksten */
+}
+
+
+
+div.author {
   display: flex;
+  align-items: center;
+  /*! legg til gap */
+}
+
+.author img {
+  /*! endre height til en bedre størrelse */
+}
+
+.author h4 {
+/*! sjekk om en annen font-weight ser bedre ut */
 }
