--- a/src/Components/BlogPreviewCard/blogPreviewCard.module.css
+++ b/src/Components/BlogPreviewCard/blogPreviewCard.module.css
@@ -22,7 +22,7 @@
   gap: 16px;
 }
 
-h3 {
+.cardContent h3 {
   width: fit-content;
   border-radius: 10px; /*! change this to a bit lower px */
   /*! change font-size, should be around 16-18px */
@@ -49,7 +49,12 @@ div.author {
 }
 
 .author img {
-  /*! endre height til en bedre størrelse */
+  width: auto;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+  border-bottom: none;
+  /*! endre height og width til en bedre størrelse */
 }
 
 .author h4 {
