--- a/src/Components/NFTCard/NFTCard.module.css
+++ b/src/Components/NFTCard/NFTCard.module.css
@@ -4,11 +4,10 @@
   width: 325px;
   height: auto;
   padding: 22px;
-  border-radius: 24px;
-  border: 1.5px solid black;
+  border-radius: 16px;
   font-family: "Figtree", serif;
   background-color: rgb(21, 39, 63);
-  /* color: aliceblue; */
+  box-shadow: 10px 10px 2px rgb(37, 73, 119);
 }
 
 .topImg {
@@ -20,32 +19,55 @@
 }
 
 .cardContent h3 {
-  color: greenyellow;
+  font-size: 20px;
+  color: rgb(255, 255, 255);
 }
 
 .cardContent > p {
-  color: rgb(0, 102, 255);
+  padding-top: 20px;
+  color: rgb(140, 161, 192);
+}
+
+.price {
+  display: flex;
+  justify-content: space-between;
 }
 
 p.crypto {
-  color: aqua;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  color: rgb(4, 251, 249);
 }
 
 p.numbers {
-  color: rgb(255, 0, 191);
+  display: flex;
+  gap: 6px;
+  align-items: center;
+  color: rgb(140, 161, 192);
 }
 
 .cardContent h4 {
-  color: orange;
+  font-size: 14.5px;
+  font-weight: 300;
+  color: rgb(140, 161, 192);
+}
+
+.author h4 span {
+  color: rgb(255, 255, 255);
 }
 
 div.author {
+  border-top: 1px solid rgb(56, 76, 105);
+  padding-top: 12px;
   display: flex;
   align-items: center;
-  gap: 12px;
+  gap: 14px;
 }
 
 .author img {
+  border: 1px solid white;
   width: auto;
   height: 32px;
   border-radius: 50%;
