--- a/src/Components/RecipePage/RecipePage.module.css
+++ b/src/Components/RecipePage/RecipePage.module.css
@@ -16,14 +16,14 @@
   padding: 20px;
   display: flex;
   justify-content: center;
-  min-width: 100vw;
+  width: 100%; /* Full width */
   min-height: 100vh;
   font-family: "serif"; /* Default font for body */
 }
 
 /* Recipe card */
 .recipePage {
-  max-width: 800px;
+  max-width: 100%; /* Ensure it takes up full width of its container */
   width: 100%;
   background-color: var(--White);
   border-radius: 15px;
@@ -34,7 +34,7 @@
 
 /* Image styling */
 .recipeImage {
-  width: 100%;
+  width: 100%; /* Ensure image is responsive */
   height: auto;
   object-fit: cover;
   border-bottom: 2px solid var(--Stone150);
@@ -127,19 +127,4 @@ h3 {
 p,
 li {
   font-family: "serif"; /* Default serif font for all p and li */
-}
-
-/* Buttons and other elements can be styled similarly */
-button {
-  background-color: var(--Brown800);
-  color: var(--White);
-  font-family: "sans-serif"; /* Default sans-serif font for buttons */
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: var(--Rose800); /* Darker rose color on hover */
 }
