--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -18,12 +18,12 @@
 }
 
 .navLink {
-  margin: 0 1rem;
+  margin: 1rem;
   text-decoration: none;
   color: white;
   font-weight: bold;
 }
 
 .navLink:hover {
-  color: #f0f0f0;
+  text-decoration: underline;
 }
